# CortexFlow

./: LICENSE  README.md  pyproject.toml
Agent_Framework_Evaluation_Toolkit/: README.md  requirements.txt
Agent_Framework_Evaluation_Toolkit/Results/: config.json
Agent_Framework_Evaluation_Toolkit/adapters/: example_adapter.py
Agent_Framework_Evaluation_Toolkit/agent_evaluator/: evaluator.py  metrics.py  utils.py  visualization.py
Agent_Framework_Evaluation_Toolkit/architecture/: composable_architecture.py  hybrid_architecture.py  multi_framework_architecture.py
Agent_Framework_Evaluation_Toolkit/data/ground_truth/: workplace_deadline_stress.json
cortexflow/: visualization.py
cortexflow/agent_framework/: Readme.md  base_agent.py  composable_agent.py  framework_adapter.py  hybrid_agent.py
cortexflow/agents/: anggraph_agent.py  autogen_agent.py  base.py  camel_agent.py  crewai_agent.py  e2b_agent.py  haystack_agent.py  llamaindex_agent.py  opendevin_agent.py
cortexflow/cli/: interface.py  presets.py  utils.py
cortexflow/core/: orchestrator.py  simulation.py  state.py  types.py
cortexflow/nvida_integration/: adaptive_learning.py  benchmark_tests.py  data_streaming.py  edge_deployment.py  fault_tolerance.py  model_converter.py  monitoring_dashboard.py  multi_agent_optimizer.py  multi_gpu_scaling.py  nvidia_integration.py  secure_api.py
