[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cortexflow"
version = "0.1.0"
description = "Multi-Agent AI System for Modeling Cognitive Processes"
readme = "README.md"
authors = [{name = "Your Name", email = "your.email@example.com"}]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "matplotlib>=3.4.0",
    "seaborn>=0.11.0",
    "networkx>=2.6.0",
    "pydot>=1.4.2",
    "plotly>=5.3.0",
    "tqdm>=4.60.0",
    "click>=8.0.0",
    "pydantic>=1.8.0",
]

[project.optional-dependencies]
e2b = ["e2b>=0.8.0"]
autogen = ["pyautogen>=0.1.0"]
crewai = ["crewai>=0.1.0"]
langgraph = ["langgraph>=0.0.10", "langchain>=0.0.200"]
camel = ["camel-ai>=0.1.0"]
haystack = ["haystack-ai>=2.0.0"]
llamaindex = ["llama-index>=0.8.0"]
opendevin = ["opendevin>=0.2.0"]
all = [
    "e2b>=0.8.0",
    "pyautogen>=0.1.0",
    "crewai>=0.1.0",
    "langgraph>=0.0.10",
    "langchain>=0.0.200",
    "camel-ai>=0.1.0",
    "haystack-ai>=2.0.0",
    "llama-index>=0.8.0",
    "opendevin>=0.2.0",
]
dev = [
    "pytest>=6.0",
    "black>=21.5b2",
    "isort>=5.9.1",
    "mypy>=0.910",
    "flake8>=3.9.2",
    "sphinx>=4.0.2",
    "sphinx-rtd-theme>=0.5.2",
]
api = [
    "fastapi>=0.68.0",
    "uvicorn>=0.15.0",
    "pydantic>=1.8.0",
]

[project.urls]
"Homepage" = "https://github.com/yourusername/cortexflow"
"Bug Tracker" = "https://github.com/yourusername/cortexflow/issues"
"Documentation" = "https://cortexflow.readthedocs.io"

[project.scripts]
cortexflow = "cortexflow.cli.interface:main"

# Configuring development tools

[tool.black]
line-length = 88
target-version = ["py38"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
